--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,13 @@ initial-scale=1.0" />
   <section id="assistant-agi"></section>
   <script>
     LangGraphChatbot.initChatBot({
-      containerId: "assistant-agi",
-      apiUrl: "<ADD_YOUR_API_URL>",
-      configurable: { "param1": "value1" },
+      containerId: "assistant-agi", // id of the HTML tag
+      apiUrl: "<ADD_YOUR_API_URL>", // server url or LangGraph cloud url
+      apiKey: "<ADD_API_KEY>", // optional only for local development
+      configurable: { "param1": "value1" }, // LangGraph configurable parameters 
       headers: {
         'Authorization': 'Bearer <TOKEN>',
-      }
+      } // your server needed headers 
     })
   </script>
 </body>
