--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,22 @@ initial-scale=1.0" />
       configurable: { "param1": "value1" }, // LangGraph configurable parameters
       headers: {
         'Authorization': 'Bearer <TOKEN>',
-      } // your server needed headers
+      }, // your server needed headers
+      retrievalTools: [], // add tools that doesn't need confirmation to be shown in UI
+      actionTools: [], // add interrupt tools
+      colors: { // edit colors if needed for interrupt tools
+        primary: '#000000', // default value 
+        cancellation: '#9CA3AF', // default value
+      },
+      welcome: { // Add welcoming message and suggestions
+        message: "How can I help you today?", // default 
+        suggestions: [
+          {
+            text: "What can I do for you ?",
+            prompt: "Tell me what you need help with",
+          }
+        ],
+      }
     })
   </script>
 </body>
